refatora ws_to_under

--- a/purchases/templates/base.html
+++ b/purchases/templates/base.html
@@ -2,6 +2,9 @@
 <html>
 	<head>
 		<title>{% block title %}Purchasing Upload{% endblock title %}</title>
+		<style>
+			table, td { border: solid 1px #CCC; border-collapse: collapse; padding: 4px}
+		</style>
 	</head>
 	<body>
 		<div>
